<resources>
    <string name="app_name">VendorwRecycler</string>
    <string name="action_settings">Settings</string>
    <string name="enter_item">Enter Item</string>
    <string name="hint_item">Enter Item</string>
    <string name="hint_qty">Quantity</string>
    <string name="hint_price">Price</string>
    <string name="hint_description">Description</string>
    <string name="save_button">SAVE</string>
    <string name="sure_text">Are you sure?</string>
    <string name="no_text">No</string>
    <string name="yes_textt">Yes</string>
    <string name="edit_item">Edit Item</string>
    <string name="updateText">Update</string>
    <string name="update_text">Update</string>
</resources>
