<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_id"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:padding="24dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_item"
                android:textSize="18sp"
                android:textStyle="italic"
                android:layout_centerHorizontal="true"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/foodItem"
                android:hint="@string/hint_item"
                android:layout_below="@+id/title"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/itemQuantity"
                android:hint="@string/hint_qty"
                android:layout_below="@+id/foodItem"
                android:inputType="number"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/price"
                android:hint="@string/hint_price"
                android:layout_below="@+id/itemQuantity"
                android:inputType="number"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/description"
                android:hint="@string/hint_description"
                android:layout_below="@+id/price"/>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/description"
                android:layout_marginTop="5dp"
                android:background="#FFAB00"
                android:text="@string/save_button"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>