<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="23dp">

            <TextView
                android:id="@+id/text_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="17sp"
                android:text="@string/sure_text"
                android:textStyle="bold" />

            <Button
                android:id="@+id/conf_no_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="#daa592"
                android:text="@string/no_text"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/conf_yes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="40dp"
                android:background="#f0e3c4"
                android:text="@string/yes_textt"
                android:textColor="@android:color/white" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>